Fix themes hero buttons on mobile

--- a/components/ThemesHero.module.css
+++ b/components/ThemesHero.module.css
@@ -174,6 +174,11 @@
   margin: 1em 0;
 }
 
+.ThemesHeroActions {
+  display: flex;
+  gap: 16em;
+}
+
 .ThemesHeroButton {
   font-size: max(20em, 15px);
   font-weight: 500;
@@ -271,6 +276,10 @@
   .ThemesHeroTagline {
     text-align: center;
     padding: 4vw;
+  }
+
+  .ThemesHeroActions {
+    justify-content: center;
   }
 
   .ThemesHeroShowcase {
